[project]
name = "xwaykeyz"
description = "Linux keymapper for X11 and Wayland, with per-app capability."
keywords = [
    "keymapper"
]
maintainers = [
    { name = "Kristopher Finkenbinder", email = "dev@redbearnet.com" }
]
requires-python = ">=3.8"
readme = "README.md"
dynamic = ["version"]
license.file = "LICENSE"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 4 - Beta"
]
dependencies = [
    "appdirs ~= 1.4",
    "dbus-python ~= 1.3.2",
    "evdev ~= 1.5",
    "hyprpy ~= 0.1.5",
    "i3ipc ~= 2.2.1",
    "inotify_simple ~= 1.3",
    "ordered_set ~= 4.1",
    "python-xlib == 0.31",
    "pywayland ~= 0.4.17",
]

[project.scripts]
xwaykeyz = "xwaykeyz.cli:main"

[project.urls]
Home-page = "https://github.com/RedBearAK/xwaykeyz/"
Bug-tracker = "https://github.com/RedBearAK/xwaykeyz/issues/"

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "pytest-asyncio",
    "looptime",
    "toml"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "looptime",
    "toml"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool]

[tool.black]
line-length = 80

[tool.hatch.version]
path = "src/xwaykeyz/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/bin",
    "/src",
    "/tests",
    "/example",
    "/*.md"
]
exclude = [
    "/.github",
    "/.gitignore",
    "/docs"
]

[tool.hatch.build.targets.wheel]
packages = ["src/xwaykeyz"]
